<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout 
	    android:id="@+id/community"
	    android:gravity="center" 
	    android:orientation="vertical" 
	    android:layout_width="0.0dip" 
	    android:layout_height="fill_parent" 
	    android:layout_weight="1.0"
	    android:padding="@dimen/ui_bottom_bar_padding">
	    
        <ImageView 
            android:id="@id/icon"
            style="@style/TabGroupIcon"
            android:layout_marginLeft="3dip"
            android:layout_marginStart="3dip"
            android:contentDescription="@string/app_name" />
        
        <TextView android:id="@+id/label"
            android:text="@string/tab_community"
            style="@style/TabGroupLabel" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/work"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:padding="@dimen/ui_bottom_bar_padding">

        <FrameLayout
            android:layout_width="34.0dip"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:id="@id/icon"
                style="@style/TabGroupIcon"
                android:contentDescription="@string/app_name" />

            <TextView
                android:textSize="8.0sp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:layout_gravity="center|end|top"
                android:id="@+id/count"
                android:background="@drawable/red_circle"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <TextView android:id="@id/label"
            android:text="@string/tab_work"
            style="@style/TabGroupLabel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact"
        android:gravity="center" 
        android:orientation="vertical"
        android:layout_width="0.0dip" 
        android:layout_height="fill_parent" 
        android:layout_weight="1.0"
        android:padding="@dimen/ui_bottom_bar_padding">
        
        <ImageView 
            android:id="@id/icon" 
            style="@style/TabGroupIcon"
            android:contentDescription="@string/app_name" />
        
        <TextView 
            android:id="@id/label" 
            android:text="@string/tab_contact"
            style="@style/TabGroupLabel" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/profile"
        android:gravity="center" 
        android:orientation="vertical" 
        android:layout_width="0.0dip" 
        android:layout_height="fill_parent" 
        android:layout_weight="1.0"
        android:padding="@dimen/ui_bottom_bar_padding">
        
        <ImageView 
            android:id="@id/icon" 
            style="@style/TabGroupIcon"
            android:contentDescription="@string/app_name" />
        
        <TextView 
            android:id="@id/label" 
            android:text="@string/tab_profile"
            style="@style/TabGroupLabel" />
        
    </LinearLayout>
    
</merge>
